# customer-support-chatbot-v5

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: Dockerfile  main.py
backend/agent/: __init__.py  cost.py  loop.py  prompt.py  test_agent.py  tools.py
backend/api/: __init__.py  routes.py  sessions.py  sse.py  test_api.py
backend/config/: settings.py  test_settings.py
backend/contracts/: __init__.py  events.py  models.py  test_contracts.py
backend/db/: __init__.py  connection.py  query.py
backend/evals/: __init__.py
backend/evals/chatbot/: __init__.py  callback.py  convert_jini_cases.py  goldens.py  jini_cases.json  test_chatbot.py  test_intent_routing.py
backend/evals/rag/: __init__.py  (+5 more)
backend/rag/: __init__.py  embed.py  schemas.py  search.py  test_search.py
backend/tools/: __init__.py  finx.py  schemas.py  test_finx.py
backend/tracing/: __init__.py  deepeval_tracer.py  interface.py  setup.py  test_tracing.py
docs/: Choice_Jini_RAG_TestCases_Phase1_Phase2.xlsx  finx_api_reports_documentation.md  project_context.md
docs/chatbot_eval/: 1_multi_turn_eval.md  2_multi_turn_eval_metrics.md  3_multi_turn_simulation.md
docs/rag_guide/: 1_building_rag_pt1.md  2_rag_eval_synthetic_data.md  3_rag_eval.md
docs/tracing/: 1_rag_tracing.md  2_multi_turn_chat_tracing.md
frontend/: .dockerignore  40-env-config.sh  Dockerfile  env-config.js  env-config.template.js  index.html  nginx.conf  tailwind.config.js
frontend/css/: styles.css  tailwind.css
frontend/js/: app.js
openspec/changes/: PARALLELIZATION.md
(+91 files in other folders)
