[project]
name = "customer-support-chatbot"
version = "0.1.0"
description = "Agentic customer-support chatbot: RAG over qa_chunks + FinX report tools, streamed over SSE."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "deepeval>=1.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend"]
